# umcpp_alpha

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  main.c  test.h  test.umc
inc/: lex.h
src/: lex.c
